# mmpc

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.guess  config.h.in  config.sub  configure  configure.ac  diff.exclude  ltmain.sh  mmpc-0.2.tar.bz2  mmpc-0.2.tar.bz2.cdbs-config_list
data/: Makefile.am  Makefile.in  mmpc.desktop.in  mmpc.service
debian/: changelog  control  copyright  mmpc-dev.install  rules
glade/: Makefile.am  Makefile.in  gmpc.glade  playlist3.glade
pixmaps/: Makefile.am  Makefile.in
po/: Makefile  Makefile.in  POTFILES  fr.gmo  ru.gmo
src/: Makefile.am  Makefile.in  cover-art-manager.c  gmpc.desktop  id3info.c  main.c  main.h  mmpc-player.c  mmpc.c  mmpc.h  mpdinteraction.c  playlist3-artist-browser.c  playlist3-current-playlist-browser.c  playlist3-file-browser.c  playlist3-find-browser.c  playlist3-tag-browser.c  playlist3.c  preferences.c
