mmpcicondir = $(datadir)/pixmaps/
mmpcicon_DATA = mmpc.png

appicondir = $(datadir)/mmpc/
appicon_DATA =	media-audiofile.png\
	media-stream.png\
	media-artist.png\
	media-play.png\
	media-pause.png\
	media-playback-pause.png\
	media-next.png\
	media-prev.png\
	gmpc-tray.png\
	mmpc.png\
	media-album.png\
	media-stop.png\
	media-playback-stop.png\
	media-playlist.png\
	player-repeat.png\
	player-shuffle.png\
	icecast.png\
	media-playback-start.png\
	media-unmuted.png\
	media-skip-forward.png\
	media-skip-backward.png

EXTRA_DIST = media-audiofile.png\
	media-stream.png\
	media-play.png\
	media-pause.png\
	media-next.png\
	media-prev.png\
	gmpc-tray.png\
	mmpc.png\
	media-artist.png\
	media-album.png\
	media-stop.png\
	player-repeat.png\
	player-shuffle.png\
	media-playlist.png\
	icecast.png\
	media-unmuted.png



